--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.14"
+    "v-mask": "^2.3.0",
+    "vue": "^2.6.14",
+    "vue-the-mask": "^0.11.1",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
+    "@types/vuelidate": "^0.7.15",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
